# rust-template

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  compose-test-db.yml  compose.yaml  dev.sh  fly.toml  lint.sh
.github/workflows/: ci.yml
api/: Cargo.toml
api/documentation/: Cargo.toml
api/documentation/src/: lib.rs
api/documentation/src/entities/todo/: database.rs  domain.rs  mod.rs  request.rs
api/documentation/src/todo/: database.rs  domain.rs  request.rs  response.rs
api/documentation/src/v1/todos/: response.rs
api/implementation/: Cargo.toml
api/implementation/src/: main.rs
api/implementation/src/common/: config.rs  constant.rs  database.rs  error.rs  mod.rs  traits.rs
api/implementation/src/resource/: doc.rs  mod.rs
api/implementation/src/resource/health/: controller.rs  repository.rs  service.rs
api/implementation/src/resource/todo/: controller.rs  entities.rs  repository.rs  service.rs
api/implementation/src/resource/v1/: doc.rs  mod.rs
api/implementation/src/resource/v1/health/: controller.rs  repository.rs
api/implementation/src/resource/v1/todo/: controller.rs  repository.rs  service.rs
api/implementation/src/resource/v1/todos/: controller.rs  repository.rs  service.rs
api/implementation/src/util/: mod.rs  tracing.rs  validator.rs
api/src/common/: database.rs  error.rs  extractor.rs  traits.rs
api/src/resource/health/: entities.rs  mod.rs  repository.rs
api/src/resource/todo/: controller.rs  entities.rs  repository.rs  service.rs
api/src/util/: parser.rs  validator.rs
api/tests/: README.md
app/: Cargo.toml
app/src/: app.rs  lib.rs
app/src/common/: config.rs  constant.rs  database.rs  error.rs  extractor.rs
app/src/docs/v1/health/: response.rs
app/src/docs/v1/todos/: database.rs  domain.rs  mod.rs  response.rs
app/src/resource/v1/: doc.rs  mod.rs
app/src/resource/v1/health/: controller.rs  service.rs
app/src/resource/v1/todos/: controller.rs  mod.rs  repository.rs  service.rs
app/src/util/: clock.rs  id_generator.rs  mod.rs  tracing.rs
app/tests/: health_test.rs  todo_test.rs
app/tests/fixtures/: app.rs  clock.rs  id_generator.rs  mod.rs
migration/: Cargo.toml
migration/src/: config.rs  database.rs  main.rs
scripts/: db-down.sh  db-migrate.sh  db-up.sh  lint.sh
seed/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
