[package]
name = "migration"
version = "0.1.0"
edition = "2021"
authors = ["Ebuka Umeokonkwo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
surrealdb = "1.0.0"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
