[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }

axum = { version = "0.6.20", features = ["json", "macros"] }
tokio = { version = "1.33.0", features = ["macros", "full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
