[package]
name = "api_documentation"
version = "0.1.0"
edition = "2021"
authors = ["Ebuka Umeokonkwo"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
serde = "1.0.190"
serde_json = "1.0.107"
surrealdb = "1.0.0"
ulid = "1.1.0"
utoipa = { version = "4.0.0", features = ["axum_extras", "ulid"] }
utoipa-rapidoc = { version = "1.0.0", features = ["axum"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
mockall = "0.11.4"
