[package]
name = "api_implementation"
version = "0.1.0"
edition = "2021"
authors = ["Ebuka Umeokonkwo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_documentation = { path = "../documentation" }
axum = { version = "0.6.20", features = ["json", "macros"] }
chrono = "0.4.31"
dotenv = "0.15.0"
envconfig = "0.10.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = "1.0.0"
tokio = { version = "1.33.0", features = ["macros", "full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
ulid = "1.1.0"
utoipa = { version = "4.0.0", features = ["axum_extras", "ulid"] }
utoipa-rapidoc = { version = "1.0.0", features = ["axum"] }
validator = { version = "0.16.1", features = ["derive"] }
